--- a/client/src/styles/loadingSpinner.css
+++ b/client/src/styles/loadingSpinner.css
@@ -15,7 +15,7 @@
     height: 100px;
     border-radius: 50%;
     border: 10px solid #ddd;
-    border-top-color: #009688;
+    border-top-color: #27272a;
     animation: loading 1s linear infinite;
   }
   @keyframes loading {
